[gd_scene load_steps=18 format=3 uid="uid://86nd7ggkmx6y"]

[ext_resource type="Texture2D" uid="uid://b55x4qbpq0a0j" path="res://assets/enemy.png" id="1_crgd8"]
[ext_resource type="Script" path="res://entities/enemies/enemy.gd" id="1_rcuwa"]
[ext_resource type="PackedScene" uid="uid://c4a0flib60lsa" path="res://components/health.tscn" id="3_kxxl4"]
[ext_resource type="Texture2D" uid="uid://ceeto3hwvy0cx" path="res://assets/enemy/slime_green.png" id="4_ow5kb"]
[ext_resource type="PackedScene" uid="uid://1y34glb3vi8q" path="res://ui/health_bar.tscn" id="5_k2rcn"]
[ext_resource type="AudioStream" uid="uid://b75sspfsal852" path="res://entities/enemies/sounds/slime-splat-1-219248.mp3" id="6_jtxb6"]
[ext_resource type="AudioStream" uid="uid://cxkv8uwxcukvp" path="res://entities/enemies/sounds/slimejump-6913.mp3" id="7_k4dya"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bl2eq"]
radius = 17.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_rn46j"]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kpokq"]
light_mode = 2

[sub_resource type="AtlasTexture" id="AtlasTexture_s33sv"]
atlas = ExtResource("4_ow5kb")
region = Rect2(0, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ik7ph"]
atlas = ExtResource("4_ow5kb")
region = Rect2(23, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6iol"]
atlas = ExtResource("4_ow5kb")
region = Rect2(46, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_d63s7"]
atlas = ExtResource("4_ow5kb")
region = Rect2(69, 0, 23, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_021gc"]
atlas = ExtResource("4_ow5kb")
region = Rect2(92, 0, 23, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_bq0x5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s33sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ik7ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6iol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d63s7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_021gc")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_drhup"]
light_mode = 2

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_rcuwa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bl2eq")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_rn46j")
scale = Vector2(0.0344828, 0.0344827)
texture = ExtResource("1_crgd8")

[node name="Health" parent="." instance=ExtResource("3_kxxl4")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
material = SubResource("CanvasItemMaterial_kpokq")
scale = Vector2(3.30435, 3.30435)
sprite_frames = SubResource("SpriteFrames_bq0x5")
autoplay = "default"
frame_progress = 0.219194

[node name="HealthBar" parent="." instance=ExtResource("5_k2rcn")]
visible = false
material = SubResource("CanvasItemMaterial_drhup")
offset_left = -12.0
offset_top = 24.0
offset_right = 13.0
offset_bottom = 26.0

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jtxb6")

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 2)
stream = ExtResource("7_k4dya")
volume_db = -0.655
pitch_scale = 0.55
autoplay = true

[connection signal="entity_died" from="Health" to="." method="_on_enemy_died"]
[connection signal="entity_took_damage" from="Health" to="." method="_on_health_entity_took_damage"]
